--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,70 @@
 @import '~bootstrap/scss/bootstrap';
+
+.sign-in {
+    border: 3px solid black;
+    // margin: 20px auto;
+    border-radius: 10px;
+    border-color: grey;
+    // text-align: left;
+    // width: 70%;
+    // align-self: center;
+    // padding-left: 10px;
+    // padding: 0;
+}
+
+
+body{
+    background-color: #f1f8e9;
+}
+
+.btn {
+    background-color: #387002;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    padding: 7px 12px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+    margin: 2px 2px;
+}
+
+.index-vehicles{
+    padding-top: 20px;
+}
+
+.show-vehicle {
+    border: 3px solid black;
+    margin: 30px auto;
+    border-radius: 10px;
+    border-color: grey;
+    text-align: left;
+    width: 90%;
+    align-self: center;
+    padding-left: 10px;
+    padding-top: 10px
+}
+
+.add-vehicle-form{
+    border: 3px solid black;
+    margin: 20px auto;
+    border-radius: 10px;
+    border-color: grey;
+    text-align: left;
+    width: 90%;
+    align-self: center;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.create-maintenance-form {
+    border: 3px solid black;
+    margin: 20px auto;
+    border-radius: 10px;
+    border-color: grey;
+    text-align: left;
+    width: 90%;
+    align-self: center;
+    padding-left: 8px;
+    padding-right: 8px;
+}
