--- a/src/index.scss
+++ b/src/index.scss
@@ -1,21 +1,43 @@
 @import '~bootstrap/scss/bootstrap';
+// @import './Car_warning_Lights-11.jpg';
 
 .sign-in {
     border: 3px solid black;
-    // margin: 20px auto;
     border-radius: 10px;
     border-color: grey;
-    // text-align: left;
-    // width: 70%;
-    // align-self: center;
-    // padding-left: 10px;
-    // padding: 0;
 }
 
+.sign-up {
+    border: 3px solid black;
+    border-radius: 10px;
+    border-color: grey;
+}
+
+.change-password{
+    border: 3px solid black;
+    border-radius: 10px;
+    border-color: grey;
+}
 
 body{
     background-color: #f1f8e9;
 }
+
+.home-page {
+    background-image: url("Car_Warning_Lights-11.jpg");
+    opacity:0.2;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top: 55px;
+    left:0px;
+    z-index:1000;
+}
+// .home-page-logo {
+//     margin-top: 50px;
+//       color: black;
+
+// }
 
 .btn {
     background-color: #387002;
